fdo#66101: lowriter crashed when trying to open .docx file

Change-Id: I516bcb4bc18806d5a83f94c0776bd0f918a1e927
Reviewed-on: https://gerrit.libreoffice.org/4550
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>
Reviewed-on: https://gerrit.libreoffice.org/4611